# relint

./: .bandit  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .relint.yml  .travis.yml  COOKBOOK.md  LICENSE  MANIFEST.in  README.md  README.rst  linter-requirements.txt  pyproject.toml  relint-pre-commit.sh  relint.py  setup.cfg  setup.py  test.diff  test_relint.py
.claude-plugin/: plugin.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  tests.yml
relint/: __init__.py  __main__.py  config.py  exceptions.py  parse.py
skills/run-relint/: SKILL.md
skills/write-rule/: SKILL.md  reference.md
tests/: conftest.py  test_main.py  test_parse.py
tests/fixtures/: .relint.yml  test.diff
