[build-system]
requires = ["flit_core>=3.12.0", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "relint"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["regex", "linter"]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
requires-python = ">=3.12"
dependencies = [
  "PyYAML",
  "rich",
]

[project.optional-dependencies]
regex = [
  "regex"
]

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[project.scripts]
relint = "relint.__main__:main"

[project.urls]
Project-URL = "https://github.com/codingjoe/relint"
Changelog = "https://github.com/codingjoe/relint/releases"

[tool.flit.module]
name = "relint"

[tool.setuptools_scm]
write_to = "relint/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --tb=short -rxs"
testpaths = ["tests"]

[tool.coverage.run]
source = ["relint"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
src = ["relint", "tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "D", # pydocstyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
]

ignore = ["B904", "D1", "E501", "S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
